--- a/addon/autoclear/autoclear.conf
+++ b/addon/autoclear/autoclear.conf
@@ -2,4 +2,4 @@
 # // Start
 ENABLED=0 # 1 is enabled then 0 is disabled
 # // Configuration
-wire=400 # Limit Per User Login ( Default 400 )
+wire=400 # RAM Limit ( Default 400 )
