--- a/addon/autoclear/autoclear.conf
+++ b/addon/autoclear/autoclear.conf
@@ -3,3 +3,4 @@
 ENABLED=0 # 1 is enabled then 0 is disabled
 # // Configuration
 wire=400 # RAM Limit ( Default 400 )
+cpu_limit=70 # CPU Limit ( Default 70 )
