--- a/bot/monitor_cpu.service
+++ b/bot/monitor_cpu.service
@@ -3,7 +3,7 @@ Description=Monitor CPU Usage Service
 After=network.target
 
 [Service]
-ExecStart=/usr/local/bin/monitor_cpu_usage.sh
+ExecStart=/usr/local/bin/monitor_cpu_usage
 Restart=on-failure
 
 [Install]
