--- a/bot/monitor_cpu.service
+++ b/bot/monitor_cpu.service
@@ -1,10 +1,11 @@
 [Unit]
-Description=Monitor CPU Usage Service
+Description=Description=Monitor CPU Usage Service
 After=network.target
 
 [Service]
 ExecStart=/usr/local/bin/monitor_cpu_usage
-Restart=on-failure
+Restart=always
+User=root
 
 [Install]
 WantedBy=multi-user.target
